# Archivos-App-Consola

./: CMakeLists.txt  EntradaPrueba.txt  README.md  ejecutable  main.cpp
Administracion Carpetas/: chmod.cpp  chmod.h
Administracion Carpetas y Permisos/: pause.cpp  pause.h
Administracion Discos/: fdisk.cpp  fdisk.h  mkdisk.cpp  mkdisk.h  mkfs.cpp  mkfs.h  mount.cpp  mount.h  rmdisk.cpp  rmdisk.h  umount.cpp  umount.h
Administracion Usuarios/: login.cpp  login.h
Analizador/: Interprete.cpp  Interprete.h
Analizador /: Interprete.cpp  Interprete.h  lexico.l  parser.y
Discos/: estructuras.cpp  estructuras.h
Reportes/: name.cpp  name.h  rep.cpp  rep.h
Script/: exec.cpp  exec.h
